# phonetic-circuits

./: .gitignore  .gitmodules  .zenodo.json  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
datasets/: MANUALLY_CURATED_EXAMPLES.md  op1_hypocorism.csv  op2_clipping.csv  op3_initialism.csv  op4_oronym.csv  op5_homophone.csv  op7_folk_etym.csv
docs/related_works/: phonology_literature_map.md
lib/: behavioral_validation.py  build_datasets.py  dataset.py  plot.py  run_act_patching.py  run_act_patching_modal.py  run_all_experiments_modal.py  run_attribution.py  run_causal_discovery.py  run_causal_discovery_modal.py  run_compositional_ablation.py  run_compositional_ablation_modal.py  run_das.py  run_das_causal_graph.py  run_das_causal_graph_modal.py  run_das_composition.py  run_das_modal.py  run_das_transfer.py  run_das_transfer_modal.py  run_evaluation.py  run_pipeline.py  run_pipeline_modal.py
lib/viz/: direction_angle_matrix.py  jaccard_mds.py  margin_distributions.py  method_comparison.py  metric_scatter.py  subspace_overlap_heatmap.py  visualize_results.py
paper/: paper_e_phonetic_circuits.tex
paper/v2/: NOTES.md  main.tex
results/: summary.json
results/causal_discovery/: causal_discovery_gpt2.json
results/circuits/: op1_hypocorism_gpt2.json  op2_clipping_gpt2.json  op3_initialism_gpt2.json  op4_oronym_gpt2.json  op5_homophone_gpt2.json  op6_folk_etym_gpt2.json
results/das/: das_k1_gpt2.json
slides/: phonetic_circuits_slides.aux  phonetic_circuits_slides.nav  phonetic_circuits_slides.tex  phonetic_circuits_slides_v2.tex
(+14 files in other folders)
