[project]
name = "phonetic-circuits"
version = "0.1.0"
description = "Circuit discovery for phonological operations in GPT-2"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<=2.2.2",
    "transformer-lens>=2.11",
    "transformers>=4.40",
    "einops>=0.8",
    "pandas",
    "numpy<2",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "datasets",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["lib*"]
